중고, 경매, 핫딜 상품 상세 페이지 CSS 수정 페이지 위로가기 버튼 CSS 수정

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -604,3 +604,16 @@ footer {
 .noborder {
   border: 0 !important;
 }
+
+/* 위로가기 */
+#topbutton {
+  position: fixed;
+  bottom:5rem;
+  right: 2rem;
+  z-index: 99;
+  width: 3rem !important;
+  cursor: pointer;
+  padding: 0.5rem 0.2rem;
+  font-size: 0.8rem;
+  text-align: center; color: #ffffff;
+}
