--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -30,13 +30,12 @@ a {
 }
 
 .color-5 {
-  background-color: #DB4D89 !important;
+  background-color: #bf3f76 !important;
 }
 
 .wrapper-border {
   border: 1px #dee2e6 solid;
 }
-
 
 /* 부트스트랩 요소 색상 강제변경 (페이징 포함) */
 .btn-color-thebora, .active>.page-link, .active>.page-link a {
@@ -113,6 +112,58 @@ a:hover, a:active {
 /* 개인메뉴 */
 .d-flex{
   margin: 1px;
+}
+
+/* 마이페이지 */
+#my-info-img {
+  position: absolute;
+  top:0; left:0;
+  font-weight: bold;
+  color: #dee2e6;
+  font-size: 0.8rem;
+  z-index: 10;
+  padding: 0.2rem 0.3rem;
+  cursor: pointer
+}
+
+.my-info-list ul {
+  display: flex;
+  list-style-type: none;
+  width: 100%;
+  padding: 0;
+}
+
+.my-info-list ul li {
+  flex: auto;
+  border-right: 1px #dee2e6 solid;
+  font-weight: bold;
+  text-align: center;
+}
+
+/* 나의 거래 */
+.my-trade-card {
+  min-height: 20rem;
+  max-height: 20rem;
+  overflow: hidden;
+}
+
+.my-trade-card-col {
+  text-align: center;
+}
+
+.my-trade-thumbnail {
+  min-height: 20rem;
+  max-height: 20rem;
+  overflow: hidden;
+}
+
+.my-trade-btn-del {
+  background-color: #DB4D89 !important;
+  color: #fff !important;
+}
+
+.my-trade-btn-del:hover {
+  background-color: #bf3f76 !important;
 }
 
 /* 출석체크 */
