--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -476,13 +476,14 @@ footer {
 
 /* 채팅 */
 #chatting-wrapper {
-  width: 60%;
+  width: 100%;
   min-height: 40%;
   max-height: 60%;
   display: flex;
   margin: 0 auto;
-  border: 1px red dotted;
+  /*border: 1px red dotted;*/
   overflow: hidden;
+  padding: 1rem;
 }
 
 #chat_left {
@@ -490,20 +491,26 @@ footer {
 }
 
 #chat_left div {
-  cursor: pointer;
+  /*cursor: pointer;*/
 }
 
 #chat_left .chat_name {
   text-align: center;
+  cursor: pointer;
+  border-bottom: 1px #dee2e6 solid;
+}
+
+#chat_left .chat_name:hover {
+  background-color: #f2f4f6;
 }
 
 #chat_right {
-  border: 1px blue solid;
+  /*border: 1px blue solid;*/
 }
 
 #chat_contents {
   max-height: 20rem !important;
-  border: 1px #000 solid;
+  /*border: 1px #000 solid;*/
 }
 
 #chat_contents h5 {
