--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -64,26 +64,32 @@ a:hover, a:active {
 
 /* 알람 */
 #alertBtn{
-  width: 350px;
+  margin-top: -2rem;
+  min-width: 300px;
   max-height: 500px;
-  overflow: scroll;
-}
-/*알람 아이콘*/
-.notification-target {
-  position: relative;
+  overflow-y: scroll;
+  /*스크롤바 가리기*/
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
 }
 
+/*스크롤바 가리기*/
+#alertBtn::-webkit-scrollbar{
+  display:none;
+}
+
+/*알람 아이콘*/
 .notification-badge {
   position: absolute;
   top: -5px;
   right: -10px;
-  background-color: red; /* 배경 색상 */
-  color: white; /* 텍스트 색상 */
-  border-radius: 50%; /* 원형으로 만들기 */
-  padding: 2px 6px; /* 배지의 패딩 */
-  font-size: 10px; /* 배지 텍스트 크기 */
-  font-weight: bold; /* 텍스트 두껍게 */
-  text-align: center; /* 텍스트 중앙 정렬 */
+  /*background-color: red; !* 배경 색상 *!*/
+  /*color: white; !* 텍스트 색상 *!*/
+  /*border-radius: 50%; !* 원형으로 만들기 *!*/
+  /*padding: 2px 6px; !* 배지의 패딩 *!*/
+  /*font-size: 10px; !* 배지 텍스트 크기 *!*/
+  /*font-weight: bold; !* 텍스트 두껍게 *!*/
+  /*text-align: center; !* 텍스트 중앙 정렬 *!*/
 
 }
 
@@ -93,7 +99,7 @@ a:hover, a:active {
 
 }
 
-#main_nav li a {
+#main_nav li a, #user-nav li a{
   font-family: 'LINESeedKR-Bd' !important;
   font-size: 1rem !important;
   color: #212529 !important;
